--- a/WindowsConfigFiles/WindowsTerminal/settings.json
+++ b/WindowsConfigFiles/WindowsTerminal/settings.json
@@ -114,13 +114,15 @@
                 "guid": "{b453ae62-4e3d-5e58-b989-0a998ec441b8}",
                 "hidden": true,
                 "name": "Azure Cloud Shell",
-                "source": "Windows.Terminal.Azure"
+                "source": "Windows.Terminal.Azure",
+                "opacity": 70
             },
             {
                 "commandline": "%SystemRoot%\\System32\\WindowsPowerShell\\v1.0\\powershell.exe",
                 "elevate": false,
                 "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
                 "hidden": true,
+                "opacity": 70,
                 "name": "Windows PowerShell"
             }
         ]
