--- a/WindowsConfigFiles/WindowsTerminal/settings.json
+++ b/WindowsConfigFiles/WindowsTerminal/settings.json
@@ -61,12 +61,13 @@
                 "guid": "{574e775e-4f2a-5b96-ac1e-a2962a402336}",
                 "hidden": false,
                 "name": "PowerShell",
-                "opacity": 75,
+                "opacity": 77,
                 "source": "Windows.Terminal.PowershellCore"
             },
             {
                 "colorScheme": "Campbell",
-                "commandline": "\"%USERPROFILE%\\AppData\\Local\\Microsoft\\WindowsApps\\Microsoft.PowerShell_8wekyb3d8bbwe\\pwsh.exe\"",
+                "commandline": "\"%LocalAppData%\\Microsoft\\WindowsApps\\Microsoft.PowerShell_8wekyb3d8bbwe\\pwsh.exe\"",
+                // "commandline": "\"%ProgramFiles%\\PowerShell\\7\\pwsh.exe\"",
                 "elevate": true,
                 "font": 
                 {
@@ -77,7 +78,24 @@
                 "hidden": false,
                 "icon": "ms-appx:///ProfileIcons/pwsh.png",
                 "name": "PowerShell Admin",
-                "opacity": 75,
+                "opacity": 77,
+                "startingDirectory": "%USERPROFILE%"
+            },
+            {
+                "colorScheme": "Campbell",
+                //"commandline": "\"%LocalAppData%\\Microsoft\\WindowsApps\\Microsoft.PowerShell_8wekyb3d8bbwe\\pwsh.exe\"",
+                "commandline": "\"%ProgramFiles%\\PowerShell\\7\\pwsh.exe\"",
+                "elevate": true,
+                "font": 
+                {
+                    "face": "MesloLGL Nerd Font Mono",
+                    "size": 9.0
+                },
+                "guid": "{898219b8-b32a-42ad-8574-05ac020267a1}",
+                "hidden": false,
+                "icon": "ms-appx:///ProfileIcons/pwsh.png",
+                "name": "PowerShell Admin",
+                "opacity": 77,
                 "startingDirectory": "%USERPROFILE%"
             },
             {
@@ -90,7 +108,7 @@
                 "guid": "{0caa0dad-35be-5f56-a8ff-afceeeaa6101}",
                 "hidden": false,
                 "name": "Command Prompt",
-                "opacity": 75
+                "opacity": 77
             },
             {
                 "altGrAliasing": true,
@@ -110,7 +128,7 @@
                 "historySize": 9001,
                 "icon": "ms-appx:///ProfileIcons/{0caa0dad-35be-5f56-a8ff-afceeeaa6101}.png",
                 "name": "Command Prompt Admin",
-                "opacity": 75,
+                "opacity": 77,
                 "padding": "8, 8, 8, 8",
                 "snapOnInput": true,
                 "startingDirectory": "%USERPROFILE%",
@@ -121,7 +139,7 @@
                 "hidden": true,
                 "name": "Azure Cloud Shell",
                 "source": "Windows.Terminal.Azure",
-                "opacity": 75,
+                "opacity": 77,
                 "font": 
                 {
                     "face": "MesloLGL Nerd Font Mono",
@@ -134,7 +152,7 @@
                 "guid": "{61c54bbd-c2c6-5271-96e7-009a87ff44bf}",
                 "hidden": true,
                 "name": "Windows PowerShell",
-                "opacity": 75,
+                "opacity": 77,
                 "font": 
                 {
                     "face": "MesloLGL Nerd Font Mono",
@@ -146,7 +164,7 @@
                 "hidden": false,
                 "name": "Developer Command Prompt for VS 2022",
                 "source": "Windows.Terminal.VisualStudio",
-                "opacity": 75,
+                "opacity": 77,
                 "font": 
                 {
                     "face": "MesloLGL Nerd Font Mono",
@@ -158,7 +176,7 @@
                 "hidden": false,
                 "name": "Developer PowerShell for VS 2022",
                 "source": "Windows.Terminal.VisualStudio",
-                "opacity": 75,
+                "opacity": 77,
                 "font": 
                 {
                     "face": "MesloLGL Nerd Font Mono",
