--- a/WindowsConfigFiles/WindowsTerminal/settings.json
+++ b/WindowsConfigFiles/WindowsTerminal/settings.json
@@ -66,8 +66,9 @@
             },
             {
                 "colorScheme": "Campbell",
-                "commandline": "\"%LocalAppData%\\Microsoft\\WindowsApps\\Microsoft.PowerShell_8wekyb3d8bbwe\\pwsh.exe\"",
-                // "commandline": "\"%ProgramFiles%\\PowerShell\\7\\pwsh.exe\"",
+                //"commandline": "\"%LocalAppData%\\Microsoft\\WindowsApps\\Microsoft.PowerShell_8wekyb3d8bbwe\\pwsh.exe\"",
+                //"commandline": "\"%ProgramFiles%\\PowerShell\\7\\pwsh.exe\"",
+                "commandline": "pwsh",
                 "elevate": true,
                 "font": 
                 {
@@ -75,23 +76,6 @@
                     "size": 9.0
                 },
                 "guid": "{898219b8-b32a-42ad-8574-05ac020267a1}",
-                "hidden": false,
-                "icon": "ms-appx:///ProfileIcons/pwsh.png",
-                "name": "PowerShell Admin",
-                "opacity": 77,
-                "startingDirectory": "%USERPROFILE%"
-            },
-            {
-                "colorScheme": "Campbell",
-                //"commandline": "\"%LocalAppData%\\Microsoft\\WindowsApps\\Microsoft.PowerShell_8wekyb3d8bbwe\\pwsh.exe\"",
-                "commandline": "\"%ProgramFiles%\\PowerShell\\7\\pwsh.exe\"",
-                "elevate": true,
-                "font": 
-                {
-                    "face": "MesloLGL Nerd Font Mono",
-                    "size": 9.0
-                },
-                "guid": "{898219b8-4f2a-5b96-8574-05ac020267a1}",
                 "hidden": false,
                 "icon": "ms-appx:///ProfileIcons/pwsh.png",
                 "name": "PowerShell Admin",
